# STM32_MUSIC_Player

./: .gitignore  CMakeLists.txt  README  README.md
MDK_ARM/: wujique.uvguix.xiaotian  wujique.uvoptx  wujique.uvprojx
MDK_ARM/RTE/_Target_1/: RTE_Components.h
app/: freeRTOS_app_task.c  freeRTOS_app_task.h  main.c  main.h  music_data.c  stm32f4xx.h  stm32f4xx_it.c  system_stm32f4xx.c
board_dev/: board_dac_sound.c  board_dac_sound.h  board_fatfs_interface.c  board_fatfs_interface.h  board_led.c  board_led.h  board_sdio_sd_low_level.c  board_sdio_sd_low_level.h  borad_lsh.c  borad_lsh.h  stm324xg_eval_sdio_sd.c  stm324xg_eval_sdio_sd.h
gcc_port/: STM32F407ZGTx_FLASH.ld  startup_stm32f407xx.s
mcu_dev/: common_tool.c  common_tool.h  mcu_dac.c  mcu_dac.h  mcu_spi.c  mcu_spi.h  mcu_uart.c  mcu_uart.h  mcu_usb.c  mcu_usb.h  tool.c  tool.h  wujique_log.c  wujique_log.h
middlewares/CherryUSB/demo/: msc_ram_template.c
middlewares/CherryUSB/demo/stm32/usb_host/stm32f429igt6/: .mxproject  stm32f429igt6.ioc
middlewares/CherryUSB/demo/stm32/usb_host/stm32f429igt6/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
middlewares/CherryUSB/demo/stm32/usb_host/stm32f429igt6/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
middlewares/CherryUSB/demo/stm32/usb_host/stm32f429igt6/MDK-ARM/: stm32f429igt6.uvoptx  stm32f429igt6.uvprojx
middlewares/FreeRTOS-Kernel/include/: FreeRTOSConfig.h
middlewares/FreeRTOS_CLI/: FreeRTOS_CLI_Public.h  Sample-CLI-commands.c  UARTCommandConsole.c  serial.c  serial.h
middlewares/fatfs_R0.15/: diskio.c  ff.h  ffconf.h
middlewares/littlefs/: lfs_port.c  lfs_port.h
middlewares/printf_/: printf.c  printf.h
middlewares/sfud/: sfud_cfg.h
middlewares/spiffs/: spiffs_port.h
